# burn_operation

./: Cargo.toml  README.md  test.txt
src/: burn.rs  main.rs
src/burn_operation/: burn.rs
