[package]
name = "burn_operation"
version = "0.1.0"
edition = "2021"
authors = ["0xKitsune",]
description = "A simple CLI tool to securely wipe a computer, at the speed of light."
license = "MIT"
repository = "https://github.com/0xKitsune/burn_operation"
documentation = "https://docs.rs/burn_operation/"
readme = "README.md"
keywords = ["secure", "wipe", "zero", "reset"]
categories = ["filesystem"]


[dependencies]
clap = {version = "3.2.17", features = ["derive"]}
jwalk = "0.1.0"
rand = "0.5.0"
